Sprint 13. Refactoring void